修订代码中的错误，重新打包可执行jar文件